# graders

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build-docker.sh  builder.dockerfile  config.toml  config.yml  deny.toml  gitlab-to-amqp.dockerfile
.github/: bors.toml  dependabot.yml
.github/workflows/: docker.yml  tests.yml
amqp-to-test/: Cargo.toml
amqp-to-test/src/: amqp.rs  cli.yml  config.rs  errors.rs  main.rs  tester.rs
amqp-utils/: Cargo.toml
amqp-utils/src/: channel.rs  errors.rs  lib.rs  types.rs
builder/: Cargo.toml
builder/src/: commands.rs  errors.rs  main.rs  outputs.rs  ziputils.rs
gitlab-to-amqp/: Cargo.toml  config.toml
gitlab-to-amqp/src/: amqp.rs  cli.yml  config.rs  errors.rs  gitlab.rs  main.rs  poster.rs  report.rs  web.rs
gitlab-to-amqp/src/gitlab/: api.rs  mod.rs
graders-utils/: Cargo.toml
graders-utils/src/: amqputils.rs  fileutils.rs  lib.rs  ziputils.rs
reports-dumper/: Pipfile  reports-dumper.py  requirements.txt
xqueue-to-amqp/: Cargo.toml
xqueue-to-amqp-py/: Pipfile  example-problem.olx  xqueue-to-ampq.py
xqueue-to-amqp/src/: main.rs  xqueue.rs
