[package]
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
name = "amqp-to-test"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.81.0"

[dependencies]
env_logger = "0.11.0"
futures = "0.3.30"
log = "0.4.22"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_yaml = "0.9.34"
thiserror = "1.0.61"
eyre = "0.6.12"
color-eyre = "0.6.3"

[dependencies.clap]
features = ["cargo"]
version = "4.4.18"

[dependencies.amqp-utils]
path = "../amqp-utils"

[dependencies.tokio]
features = ["macros", "rt-multi-thread", "sync"]
version = "1.43.1"
