[package]
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
name = "amqp-to-test"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
rust-version = "1.86.0"

[dependencies]
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
eyre = "0.6.12"
color-eyre = "0.6.5"

[dependencies.clap]
features = ["cargo"]
version = "4.5.40"

[dependencies.amqp-utils]
path = "../amqp-utils"

[dependencies.tokio]
features = ["macros", "rt-multi-thread", "sync"]
version = "1.46.0"
