[package]
name = "amqp-utils"
version = "0.1.0"
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
edition = "2021"
license = "GPL-3.0"
rust-version = "1.81.0"

[dependencies]
futures = "0.3.30"
lapin = "2.3.3"
log = "0.4.22"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.120"
thiserror = "1.0.61"
