[package]
name = "amqp-utils"
version = "0.1.0"
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
edition = "2024"
license = "GPL-3.0"
rust-version = "1.86.0"

[dependencies]
futures = "0.3.31"
lapin = "3.0.0"
log = "0.4.27"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
