[package]
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
name = "builder"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.81.0"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_yaml = "0.9.34"
is_executable = "1.0.3"
thiserror = "1.0.64"
eyre = "0.6.12"
tempfile = "3.12.0"
clap = { version = "4.5.18", features = ["derive"] }

[dependencies.graders-utils]
path = "../graders-utils"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.40.0"
