[package]
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
name = "builder"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.81.0"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_yaml = "0.9.34"
is_executable = "1.0.4"
thiserror = "1.0.69"
eyre = "0.6.12"
tempfile = "3.19.1"
clap = { version = "4.5.36", features = ["derive"] }

[dependencies.graders-utils]
path = "../graders-utils"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.44.2"
