[package]
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
name = "gitlab-to-amqp"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.81.0"

[dependencies]
env_logger = "0.11.5"
futures = "0.3.30"
git2 = "0.19.0"
hyper-tls = "0.5.0"
log = "0.4.22"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
zip = "2.2.0"
pin-utils = "0.1.0"
libc = "0.2.159"
eyre = "0.6.12"
color-eyre = "0.6.3"
tempfile = "3.12.0"

[dev-dependencies]
# Fake one to be able to use cargo update -Zminimal-versions
openssl = "0.10.66"

[dependencies.clap]
features = ["cargo"]
version = "4.5.18"

[dependencies.amqp-utils]
path = "../amqp-utils"

[dependencies.graders-utils]
path = "../graders-utils"

[dependencies.hyper]
features = ["server"]
version = "0.14.30"

[dependencies.uuid]
features = ["v4"]
version = "1.10.0"

[dependencies.url]
features = ["serde"]
version = "2.5.2"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.40.0"
