[package]
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
name = "gitlab-to-amqp"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
rust-version = "1.86.0"

[dependencies]
env_logger = "0.11.8"
futures = "0.3.31"
git2 = "0.20.0"
hyper-tls = "0.5.0"
log = "0.4.27"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
zip = "4.0.0"
pin-utils = "0.1.0"
libc = "0.2.171"
eyre = "0.6.12"
color-eyre = "0.6.3"
tempfile = "3.19.1"

[dev-dependencies]
# Fake one to be able to use cargo update -Zminimal-versions
openssl = "0.10.72"

[dependencies.clap]
features = ["cargo"]
version = "4.5.36"

[dependencies.amqp-utils]
path = "../amqp-utils"

[dependencies.graders-utils]
path = "../graders-utils"

[dependencies.hyper]
features = ["server"]
version = "0.14.32"

[dependencies.uuid]
features = ["v4"]
version = "1.16.0"

[dependencies.url]
features = ["serde"]
version = "2.5.4"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.44.2"
