[package]
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
name = "gitlab-to-amqp"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
rust-version = "1.86.0"

[dependencies]
env_logger = "0.11.8"
futures = "0.3.31"
git2 = "0.20.2"
hyper-tls = "0.5.0"
log = "0.4.28"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
zip = "6.0.0"
pin-utils = "0.1.0"
libc = "0.2.176"
eyre = "0.6.12"
color-eyre = "0.6.5"
tempfile = "3.23.0"

[dev-dependencies]
# Fake one to be able to use cargo update -Zminimal-versions
openssl = "0.10.73"

[dependencies.clap]
features = ["cargo"]
version = "4.5.48"

[dependencies.amqp-utils]
path = "../amqp-utils"

[dependencies.graders-utils]
path = "../graders-utils"

[dependencies.hyper]
features = ["server"]
version = "0.14.32"

[dependencies.uuid]
features = ["v4"]
version = "1.18.1"

[dependencies.url]
features = ["serde"]
version = "2.5.7"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.47.1"
