[package]
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
name = "graders-utils"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.81.0"

[dependencies]
log = "0.4.27"
reqwest = { version = "0.11.27", features = ["stream"] }
serde = "1.0.219"
serde_derive = "1.0.219"
thiserror = "1.0.69"
tokio = { version = "1.44.2", features = ["fs", "io-util"] }
zip = "2.6.1"
