[package]
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
name = "graders-utils"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
rust-version = "1.86.0"

[dependencies]
log = "0.4.27"
reqwest = { version = "0.11.27", features = ["stream"] }
serde = "1.0.219"
serde_derive = "1.0.219"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["fs", "io-util"] }
zip = "5.0.0"
