[package]
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
name = "graders-utils"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
rust-version = "1.86.0"

[dependencies]
log = "0.4.28"
reqwest = { version = "0.12.23", features = ["stream"] }
serde = "1.0.228"
serde_derive = "1.0.228"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["fs", "io-util"] }
zip = "6.0.0"
