[package]
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
name = "xqueue-to-amqp"
version = "0.1.0"

[dependencies]
env_logger = "0.5.3"
futures = "0.1.18"
futures-timer = "0.1.1"
http = "0.1"
hyper = "0.12"
lapin-futures = "0.13"
log = "0.4"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
toml = "0.4.5"
failure = "0.1.2"
