[package]
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
name = "xqueue-to-amqp"
version = "0.1.0"
edition = "2018"

[dependencies]
env_logger = "0.7.1"
futures = "0.1.26"
futures-timer = "0.1.1"
http = "0.2.0"
hyper = "0.12.25"
lapin-futures = "0.18.0"
log = "0.4.6"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.42"
toml = "0.5.0"
failure = "0.1.6"
